--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongoose": "^8.7.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "tinyurl": "^1.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
